Fix footer icons sometimes being misaligned

--- a/static/styles/social.css
+++ b/static/styles/social.css
@@ -7,6 +7,8 @@
 	font-size: 1px;
 	color: transparent !important;
 	text-decoration: none;
+	white-space: nowrap;
+	overflow: hidden;
 	
 	background-image: url('/static/images/social_icons.png');
 	background-size: 144px 432px;
